--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,40 +1,28 @@
-name: PHP Composer
+name: CI-CD # Give your workflow a name
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: push # Run the workflow for each push event (i.e commit)
 
 jobs:
-  build:
-
+  build-js:
+    name: Build Js/Css
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Validate composer.json and composer.lock
-      run: composer validate
-
-    - name: Cache Composer packages
-      id: composer-cache
-      uses: actions/cache@v2
-      with:
-        path: vendor
-        key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-php-
-
-    - name: Install dependencies
-      if: steps.composer-cache.outputs.cache-hit != 'true'
-      run: composer install --prefer-dist --no-progress --no-suggest
-
-    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-    # Docs: https://getcomposer.org/doc/articles/scripts.md
-
-    # - name: Run test suite
-    #   run: composer run-script test
+      - uses: actions/checkout@v1
+        # Build JS
+  test-php:
+      name: Test/Lint PHP
+      runs-on: ubuntu-latest
+      steps:
+      - uses: actions/checkout@v1
+        # Test and Lint PHP code
+  deploy:
+    name: Deploy to Production
+    runs-on: ubuntu-latest
+    # Note that this needs both of the other steps to have completed successfully
+    needs: [build-js, test-php] 
+    steps:
+    - uses: actions/checkout@v1
+      # Deploy Code 
     - name: Install Surge
       run: npm install --global surge
       
